--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "bugs": {
     "url": "https://github.com/prayashthapa/Musiverse/issues"
   },
-  "homepage": "https://github.com/prayashthapa/Musiverse#readme"
+  "homepage": "https://github.com/prayashthapa/Musiverse#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-if": "^2.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-useref": "^3.0.7"
+  }
 }
